finish tests